# media_only_tg_bot

./: .coverage  .coveragerc  .gitignore  .pre-commit-config.yaml  .pylintrc  LICENSE  README.md  media_only_topic.py  pyproject.toml  tox.ini  tox.toml
.github/workflows/: auto_approve.yml  pylint.yml  tox.yml
media_only_topic/: __main__.py  make_utils.py  media_only_topic.py  utils.py
src/: logger.py  make_utils.py  media_only_topic.py  utils.py
templates/: error_email.html
tests/: conftest.py  test_conftest.py  test_html_formatter.py  test_make_utils.py  test_media_only_topic.py  test_utils.py
